--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -217,3 +217,19 @@ body {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px); /* Start slightly below */
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0); /* End at the original position */
+  }
+}
+
+.fade-in-up {
+  opacity: 0; /* Initially hidden */
+  animation: fadeInUp 500ms ease-in-out forwards; /* 300ms animation duration */
+}
